--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
+spring.jpa.properties.hibernate.cache.region.factory_class = org.hibernate.cache.ehcache.EhCacheRegionFactory
 
 
-spring.thymeleaf.cache: false
-security.basic.enabled: false
+spring.thymeleaf.cache=false
+security.basic.enabled=false
 # demo only:
-security.user.password: password
-logging.level.org.springframework.security: INFO
+security.user.password=password
+logging.level.org.springframework.security=INFO
